--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         autocomplete.addListener('place_changed', function() {
             var place = autocomplete.getPlace();
             console.log(place.geometry.location.lat());
+            console.log(place);
         });}
     </script>
      <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnCIGvDkiG4uE9NAiAIyb5qrad29QyUWw&libraries=places&callback=f"
